# nix-os.config

./: .gitignore  LICENSE  README.md  flake.nix  gcp-installation.md  mac-installation.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: base_pull_request.md
.github/workflows/: docs.yml
apps/: README.md
apps/aarch64-darwin/: apply  build  build-switch
apps/x86_64-darwin/: apply
apps/x86_64-linux/: apply  build  build-switch  install  nvidia-drivers-installation.md  rollback
docs/: pyproject.toml  shell.nix
docs/.gh-workflows/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_index/: index.md  modules-index.md
docs/source/_index/templates-index/: deprecated-templates-index.md  overview-index.md  pythonml-index.md
docs/source/autogen/: add-custom-packages.md  apps-README.md  config-README.md  darwin-README.md  deprecated-README.md  gcp-installation.md  hosts-README.md  linux-README.md  mac-installation.md  nixos-config-README.md  nvidia-drivers-installation.md  overlays-README.md  pixi-templates-README.md  shared-README.md  templates-README.md  uv-templates-README.md
docs/source/scripts/: __init__.py  parser.py
docs/source/src/parser/: __init__.py  markdown.py
hosts/: README.md
hosts/darwin/: default.nix  default.nix~
hosts/linux/: default.nix
hosts/nixos/: default.nix
modules/darwin/: README.md  casks.nix  files.nix  home-manager.nix  home-manager.nix~  packages.nix
modules/darwin/dock/: default.nix
modules/linux/: README.md  files.nix  home-manager.nix  packages.nix
modules/nixos/: README.md  files.nix  home-manager.nix  packages.nix
modules/shared/: #packages.nix#  README.md  default.nix  files.nix  home-manager.nix  mutable.nix  packages.nix  packages.nix~  programs.nix  vscode-ext-list.nix
modules/shared/cachix/: default.nix
modules/shared/config/: README.md  gcp-ssh-script.sh  starship.toml  wezterm.lua
modules/shared/config/emacs/: config.org
modules/shared/config/vscode/: extensions.txt  install-extensions.sh  keybindings.json  settings.json
modules/shared/config/vscode/snippets/: python.json
overlays/: README.md  emacs-native-comp.nix  emacs-patch.nix  master-pkgs.nix  my-vscode.nix  oh-my-bash.nix  tmp.nix
overlays/nxgl-overlay/: default.nix  tmp.txt
templates/: README.md
templates/deprecated/: README.md
templates/deprecated/nixos-pythonml/: flake.nix
templates/pixi-templates/: README.md
templates/pixi-templates/flake-python-ml/.nix/: flake.nix
templates/pixi-templates/flake-python-ml/.nix/overlays/: master-pkgs.nix
templates/pixi-templates/global-python-ml/: .envrc  pyproject.toml
templates/pythonml/: .gitignore  flake.nix  pyproject.toml
templates/pythonml/.nix/: flake.nix
templates/uv-templates/: README.md
templates/uv-templates/pythonml/: pyproject.toml
templates/uv-templates/pythonml/.nix/: flake.nix
templates/uv-templates/pythonml/.nix/overlays/: master-pkgs.nix
