[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "docs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sphinx",
    "myst-parser",
    "sphinx-copybutton",
    "furo",
    "doc8",
    "rstcheck",
    "esbonio",
]

[tool.setuptools]
package-dir = { "" = "source" }

[tool.setuptools.packages.find]
where = ["source"]
include = ["src.*"]

[tool.ruff]
src = ["source/src"]